adding logging